fix: fix Techstock logo not showing on header

--- a/root/frontend/style/product-info.css
+++ b/root/frontend/style/product-info.css
@@ -1,3 +1,8 @@
+.page-info,
+.page-info > main {
+	width: fit-content;
+}
+
 .page-info > main {
 	padding-top: var(--space);
 	padding-bottom: var(--space);
